# ChangeLog for app-misc/tudu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Dec 2009; James Rowe <jnrowe@gmail.com> tudu-0.6.ebuild:
  Keyworded amd64.

  23 Nov 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Switched SRC_URI as upstream site is back online.

*tudu-0.6 (22 Nov 2009)

  22 Nov 2009; James Rowe <jnrowe@gmail.com> +tudu-0.6.ebuild,
  +files/tudu-0.6-build_fixes.patch:
  Version bump [9a1].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Switched to EAPI 2.

  19 Oct 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Changed SRC_URI while author's site is down.

  28 Jul 2009; James Rowe <jnrowe@gmail.com>
  -files/tudu-0.4.1-build_fixes.patch:
  Removed old files.

  28 Jul 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Keyworded amd64.

  10 Jun 2009; James Rowe <jnrowe@gmail.com> -tudu-0.4.1.ebuild:
  Removing old ebuild.

  10 Jun 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Keyworded x86.

  21 May 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Fix DTD reference in welcome.xml.

  21 May 2009; James Rowe <jnrowe@gmail.com> tudu-0.5.1.ebuild:
  Keyworded ~amd64.

*tudu-0.5.1 (18 May 2009)

  18 May 2009; James Rowe <jnrowe@gmail.com> +tudu-0.5.1.ebuild:
  Version bump.

*tudu-0.4.1 (10 May 2009)

  10 May 2009; James Rowe <jnrowe@gmail.com> +tudu-0.4.1.ebuild,
  +files/tudu-0.4.1-install_fixes.patch, +metadata.xml:
  Initial ebuild, by me.
