@@ -3,16 +3,14 @@ Hash: SHA1
 
 AUX tudu-0.5.1-build_fixes.patch 1818 RMD160 09cf5e8905efe12a5e5a23e5ec0b687f07d587d7 SHA1 a3b846c7f0ab458a86182014ad2925bc59648373 SHA256 184954f4b4ec17000d4f803eba71b507133d39191bc485befbbb9a512c315fb5
 AUX tudu-0.6-build_fixes.patch 1908 RMD160 702c5e7b3ed4e8cbf0ba82f5bec917bfc49c3a3a SHA1 e0c9af2cc779fc79dfdec3af4b5b5809af3ba6a5 SHA256 c3a664fc6cae4190c1c886bb1ba42becc5d453d86521f15813e3947fa6cf1303
-DIST tudu-0.5.1.tar.gz 45598 RMD160 cf6bc9eced8ef14345f8bc37e4067465647ccd1e SHA1 b8acbd71ebbc95c3143ccd8e7302b29588ad5238 SHA256 2b1f34b63fe0cdf3dfb28948253c0e1a6ee6642838be91dcaa771089c43749c6
 DIST tudu-0.6.tar.gz 46496 RMD160 430e835f64005d2547a46b5bbd08eb909f51a803 SHA1 b8c10c438d185256dd61af86e4e4fb85f182b510 SHA256 7bad929ea9213ac47ff9d8859cc401f78041e9082259bd1985c38377ba340d12
-EBUILD tudu-0.5.1.ebuild 731 RMD160 c6593739ec6dfc453d0360d01f40ad4b4534226c SHA1 6ea0cb99566b2130d863c0f9541ec1840e7bcad4 SHA256 baadd0d4348c8145654a58471a552967ebdabe51ee6ab4bf3334d24132f6908d
-EBUILD tudu-0.6.ebuild 757 RMD160 dfa73face5faf03f9428bb5813b624b79819a9d0 SHA1 cf7d32f42082caa81981151f0b304f235d71a8b1 SHA256 5d3d8f88e1929d73ffead435f2ea9bc8c3ebd26307dabb40022cddf8ec6fa475
-MISC ChangeLog 1490 RMD160 09761d2cb2f43229c81b3550f42c92090a940e72 SHA1 523859a17e79faf31153c99ad9acffebc7cc5cc2 SHA256 f414093699d03216d6437f4bd7817ad728768002092ec85329daa8c14ecfc06d
+EBUILD tudu-0.6.ebuild 756 RMD160 e187a1ff1444d2abdc2a893982ce6a868357f95f SHA1 05223fcf22ea51b85707ea8ddece52a820fac772 SHA256 2bcf8f2a49bfe7962b3e97e6e12571e093cbd04a9cd78db9325318dbc1d2a60d
+MISC ChangeLog 1592 RMD160 45a9e1f018a5dd198696f307772896e93db81f31 SHA1 f1b00288cbccadfa8b284e4d7f7e599a44bed2a0 SHA256 df665749c08636e0bbafebe3423e6a2d05169ad32658a2840e93f42ab0201341
 MISC metadata.xml 552 RMD160 0e9b902ba65c3333b945f0878f6d7a4d2cc1487a SHA1 fc4d78476976a7b8245b240b95cd428989e03915 SHA256 51f17cd0993d83d8529d07ee0846bb0d5db9aebcfdaaba62ff5e52696018d021
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkswGykACgkQzJrj3cAXR0lnAACfUAma1V+6hAxN8I4jDj73d0kk
-KpAAn3JzZJU7E8bl5GXqnE/wopIV/lQp
-=PpPk
+iEYEARECAAYFAkswHVIACgkQzJrj3cAXR0lIEQCfeC7WtCoVf48ty5lUh6pasgg2
+NasAmwf8OQ+/jEaGzO8U80XMi7ph4xMI
+=TZWU
 -----END PGP SIGNATURE-----
