@@ -12,7 +12,7 @@ SRC_URI="http://www.cauterized.net/~meskio/tudu/${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND=""
