@@ -1,22 +1,0 @@
-
-
-0
-http://www.cauterized.net/~meskio/tudu/tudu-0.5.1.tar.gz
-
-http://www.cauterized.net/~meskio/tudu/
-GPL-3
-TuDu is a comand line interface to manage hierarchical todos.
-amd64 x86
-eutils multilib portability toolchain-funcs versionator
-
-
-
-
-2
-
-compile install prepare
-
-
-
-
-
