@@ -6,7 +6,7 @@ http://www.cauterized.net/~meskio/tudu/tudu-0.6.tar.gz
 http://www.cauterized.net/~meskio/tudu/
 GPL-3
 TuDu is a comand line interface to manage hierarchical todos.
-amd64 ~x86
+amd64 x86
 eutils multilib portability toolchain-funcs versionator
 
 
