@@ -1,4 +1,3 @@
-REM 2009-12-22 +1 MSG Stabilise x86 app-misc/tudu-0.6 %a
 REM 2009-12-23 +1 MSG Stabilise amd64 x11-wm/matwm2-0.0.89 %a
 REM 2009-12-23 +1 MSG Stabilise x86 x11-wm/matwm2-0.0.89 %a
 REM 2009-12-23 +1 MSG Stabilise amd64 app-misc/taskwarrior-1.8.4 %a
