@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Dec 2009; James Rowe <jnrowe@gmail.com> -tudu-0.5.1.ebuild,
+  tudu-0.6.ebuild:
+  Keyworded x86.
+
   22 Dec 2009; James Rowe <jnrowe@gmail.com> tudu-0.6.ebuild:
   Keyworded amd64.
 
